--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel html/index.html",
-    "build": "parcel build html/*.html --no-source-maps --public-url /bfbb/",
+    "build": "parcel build html/*.html --no-source-maps --public-url /incredibles/",
     "prettier": "prettier --check js/**/*.jsx",
     "format": "prettier --write js/**/*.jsx",
     "lint": "eslint js/**/*.jsx"
